--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ target/m2e-wtp/web-resources/META-INF/maven/kr\.spring/project/pom\.properties
 target/m2e-wtp/web-resources/META-INF/maven/kr\.spring/project/pom\.xml
 
 target/test-classes/log4j\.xml
+
+target/classes/kr/spring/project/service/HomeService\.class
+
+target/classes/kr/spring/project/service/HomeServiceImp\.class
